# sdl-simple-gameloop

./: CMakeLists.txt
src/: Game.cpp  Game.h  main.cpp
